--- a/404.html
+++ b/404.html
@@ -2,7 +2,6 @@
 layout: null
 ---
 
-<!DOCTYPE HTML>
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -17,7 +16,7 @@ layout: null
     <img src="/res/img/404/404.png" class="png"/>
   </div>
   <div class="tips">
-    <p>刀刀亮小分队正在努力寻找界面</p>
+    <p>正在努力寻找界面</p>
     <p>请稍等啊，客官,:）</p>
     <p id="view"/>
   </div>
@@ -29,7 +28,7 @@ layout: null
   function testTime() {
     view.innerHTML = t + " 秒后跳转至首页...";
     if(t == 0) {
-      location="http://daodaoliang.github.io/";
+      location="http://qingyu1229.github.io/";
     }
     t--;
   }
